Update UI and implement camera view, deeplab model

--- a/ARBeauty/Info.plist
+++ b/ARBeauty/Info.plist
@@ -68,5 +68,7 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow app to use your camera?</string>
 </dict>
 </plist>
