Take Nails Photo

--- a/ARBeauty/Info.plist
+++ b/ARBeauty/Info.plist
@@ -21,7 +21,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>"ARBeauty" Would Like To Access Your Camera</string>
+	<string>&quot;ARBeauty&quot; Would Like To Access Your Camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to save photo in your photo library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>&quot;ARBeauty&quot; Would Like To Access Your Album</string>
 	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
